--- a/.yo-rc.json
+++ b/.yo-rc.json
@@ -13,7 +13,7 @@
     "clientThemeVariant": "",
     "creationTimestamp": 1659393883905,
     "databaseType": "sql",
-    "devDatabaseType": "h2Disk",
+    "devDatabaseType": "mysql",
     "devServerPort": 4200,
     "dtoSuffix": "DTO",
     "enableGradleEnterprise": false,
